--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,24 @@ header {
     background-repeat: repeat;
     background-attachment: fixed;
     background-color:rgb(78, 159, 253) ;
-    
+
 }
 
 h1 {
     font-size: 50px;
+    margin: 0px;
+}
 
+h2 {
+    margin: 0px;
+    color: grey;
+}
+
+h3 {
+    margin: 0px;
+    color: grey;
+}
+
+span {
+    color: rgb(82, 188, 235);
 }
