feat: add paragraph

--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,6 @@ header {
     background-image: url(../img/pattern.png) ;
     background-repeat: repeat;
     background-color:rgb(78, 159, 253) ;
-
-
 }
 
 h1 {
@@ -35,4 +33,13 @@ span {
 
 .subtitle-img{
     font-size: 15px;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.text-background {
+    background-color: yellow;
+    color: black;
 }
