feat: add head of table

--- a/css/style.css
+++ b/css/style.css
@@ -43,3 +43,9 @@ span {
     background-color: yellow;
     color: black;
 }
+
+thead {
+    background-color:rgb(32, 169, 229);
+    color: white;
+
+}
