--- a/css/style.css
+++ b/css/style.css
@@ -44,8 +44,17 @@ span {
     color: black;
 }
 
+th{
+   width: 700px;
+   text-align: left;
+}
+
 thead {
     background-color:rgb(32, 169, 229);
     color: white;
 
+}
+
+.color-table {
+    background-color: rgb(177, 229, 242) ;
 }
